--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<div>
 							<nav class="menu">
 								<div class="menu__item">
-									<a class="menu__item-link" href="https://github.com/balguzhinov/FinalProjectMobileIOS" id="project_links" target="_blank">/ Student's tool app</a>
+									<a class="menu__item-link" href="https://github.com/balguzhinov/students-tool-application" id="project_links" target="_blank">/ Student's tool app</a>
 									<div class="marquee">
 										<div class="marquee__inner">
 											<span>Viewing university's moodle,track tasks,reading news</span>	
@@ -183,7 +183,7 @@
 
 				<section class="socials">
 					<div class="socials-container">
-					<div class="socials-id dr"><a href="./CV.pdf" target=”_blank”>Resume</a></div>
+					<div class="socials-id dr"><a href="./MyCV.pdf" target=”_blank”>Resume</a></div>
 					<div class="socials-id ln"><a href="https://github.com/balguzhinov" target=”_blank”>GitHub</a></div>
 					<div class="socials-id ln"><a href="https://www.linkedin.com/in/balguzhinov/" target=”_blank”>LinkedIn</a></div>
 					<div class="socials-id ig"><a href="https://t.me/balguzh1nov" target=”_blank”>Telegram</a></div>
